codegen: refactor templates to allow and ignore multiple tags
The default openapi-generator golang templates split code into
a file per tag. To reduce code complexity and improve naming,
we customized the templates to only expect a single tag from
the CockroachDB Cloud API's OpenAPI spec (included in this
repo as internal/spec/swagger.json).
Now we want the CockroachDB Cloud API's generated documentation
to group methods by tag, which requires including multiple tags
in its OpenAPI spec.
Instead of restricting the CockroachDB Cloud API's spec to one
tag, the following changes replace the default tag-triggered
template type with a template type that includes (and can
therefore ignore) multiple tags:

- Moved mustache templates into spec/templates.
- Moved API operation code templating from the 'API' template
type (creates one file per tag) api.mustache to the
'SupportingFile' type (creates one file) service.mustache.
- Updated spec/config.yaml to include the new service.mustache
template and mark api.mustache output files to be ignored.

The generated pkg/client code is unchanged.

--- a/internal/spec/config.yaml
+++ b/internal/spec/config.yaml
@@ -1,3 +1,12 @@
+templateDir: internal/spec/templates
+# Include new templates and filenames.
+files:
+    service.mustache:
+      templateType: SupportingFiles
+      destinationFilename: service.go
+    api.mustache:
+      templateType: API
+      destinationFilename: _ignore.txt
 # Go generator options
 # https://openapi-generator.tech/docs/generators/go
 packageName: "client"
