Add Optional struct to control marshaling of nil values

--- a/internal/spec/config.yaml
+++ b/internal/spec/config.yaml
@@ -4,6 +4,9 @@ files:
     service.mustache:
       templateType: SupportingFiles
       destinationFilename: service.go
+    utils.mustache:
+      templateType: SupportingFiles
+      destinationFilename: utils.go
     api.mustache:
       templateType: API
       destinationFilename: _ignore.txt
