make: update the deprecated jq image
This commit updates the deprecated docker image `stedolan/jq` to
`ghcr.io/jqlang/jq:1.7.1` as the project has been transferred under
https://github.com/jqlang.
Package info: https://github.com/jqlang/jq/pkgs/container/jq

This fixes the deprecation error:
```
[DEPRECATION NOTICE] Docker Image Format v1 and Docker Image manifest version 2, schema 1 support is disabled by default and will be removed in an upcoming release. Suggest the author of docker.io/stedolan/jq:latest to upgrade the image to the OCI Format or Docker Image manifest v2, schema 2. More information at https://docs.docker.com/go/deprecated-image-specs/
```

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   jq:
-    image: stedolan/jq
+    image: ghcr.io/jqlang/jq:1.7.1
     volumes:
       - ./:/go/src/github.com/cockroachdb/cockroach-cloud-sdk-go
     working_dir: /go/src/github.com/cockroachdb/cockroach-cloud-sdk-go
